BoilerPlate/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gin-jwt-deployment
  namespace: gin-jwt
  labels:
    app: gin-jwt
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gin-jwt
  template:
    metadata:
      labels:
        app: gin-jwt
    spec:
      containers:
        - name: gin-jwt
          image: your-registry/your-username/gin-jwt-swagger:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
