BoilerPlate/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gin-jwt-svc
  namespace: gin-jwt
spec:
  selector:
    app: gin-jwt
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
